Proxy invocation dispatch refactored.